[gd_scene load_steps=7 format=3 uid="uid://cdqcd1rsjw4uv"]

[ext_resource type="Script" uid="uid://cqjq8leieof6h" path="res://boss_fight.gd" id="1_bhtn8"]
[ext_resource type="PackedScene" uid="uid://ddu6trkcxoe8v" path="res://player.tscn" id="2_n65jo"]
[ext_resource type="Texture2D" uid="uid://be0nmxaop3apg" path="res://Sprites/heart.png" id="3_n65jo"]
[ext_resource type="Script" uid="uid://dl2rv0f4xe1eu" path="res://heart_container.gd" id="3_nq0y5"]
[ext_resource type="PackedScene" uid="uid://bvqti4pjm32d2" path="res://mask.tscn" id="5_47mo0"]

[sub_resource type="Curve2D" id="Curve2D_n65jo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16, 8, 0, 0, 0, 0, 8, -40, 0, 0, 0, 0, 48, -40, 0, 0, 0, 0, 56, -40, 0, 0, 0, 0, 64, -40, 0, 0, 0, 0, 80, -40, 0, 0, 0, 0, 96, -40, 0, 0, 0, 0, 112, -40, 0, 0, 0, 0, 152, -40, 0, 0, 0, 0, 192, -40, 0, 0, 0, 0, 200, -40, 0, 0, 0, 0, 224, -40, 0, 0, 0, 0, 264, -48, 0, 0, 0, 0, 296, -48, 0, 0, 0, 0, 320, -48, 0, 0, 0, 0, 344, -48, 0, 0, 0, 0, 392, -40, 0, 0, 0, 0, 432, -40, 0, 0, 0, 0, 464, -48, 0, 0, 0, 0, 496, -56, 0, 0, 0, 0, 544, -48, 0, 0, 0, 0, 584, -48, 0, 0, 0, 0, 608, -48, 0, 0, 0, 0, 624, -48, 0, 0, 0, 0, 664, -40, 0, 0, 0, 0, 704, -40, 0, 0, 0, 0, 744, -40, 0, 0, 0, 0, 776, -40, 0, 0, 0, 0, 800, -40, 0, 0, 0, 0, 840, -40, 0, 0, 0, 0, 864, -40, 0, 0, 0, 0, 904, -40, 0, 0, 0, 0, 944, -40, 0, 0, 0, 0, 984, -48, 0, 0, 0, 0, 1048, -48, 0, 0, 0, 0, 1088, -48, 0, 0, 0, 0, 1112, -56, 0, 0, 0, 0, 1128, -56)
}
point_count = 38

[node name="bossFight" type="Node"]
script = ExtResource("1_bhtn8")

[node name="player" parent="." instance=ExtResource("2_n65jo")]
position = Vector2(546, 572)

[node name="maskPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_n65jo")

[node name="maskSpawnLocation" type="PathFollow2D" parent="maskPath"]
position = Vector2(16, 8)
rotation = -1.735945

[node name="maskTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="fightTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="healthCanvas" type="CanvasLayer" parent="."]

[node name="heartContainer" type="HBoxContainer" parent="healthCanvas"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 216.0
grow_vertical = 0
script = ExtResource("3_nq0y5")

[node name="heart1" type="TextureRect" parent="healthCanvas/heartContainer"]
layout_mode = 2
texture = ExtResource("3_n65jo")
expand_mode = 3

[node name="heart2" type="TextureRect" parent="healthCanvas/heartContainer"]
layout_mode = 2
texture = ExtResource("3_n65jo")
expand_mode = 3

[node name="heart3" type="TextureRect" parent="healthCanvas/heartContainer"]
layout_mode = 2
texture = ExtResource("3_n65jo")
expand_mode = 3

[node name="heart4" type="TextureRect" parent="healthCanvas/heartContainer"]
layout_mode = 2
texture = ExtResource("3_n65jo")
expand_mode = 3

[node name="heart5" type="TextureRect" parent="healthCanvas/heartContainer"]
layout_mode = 2
texture = ExtResource("3_n65jo")
expand_mode = 3

[node name="mask" parent="." instance=ExtResource("5_47mo0")]
collision_mask = 0

[connection signal="timeout" from="maskTimer" to="." method="_on_mask_timer_timeout"]
[connection signal="timeout" from="fightTimer" to="." method="_on_fight_timer_timeout"]
[connection signal="maskHit" from="mask" to="player" method="_on_mask_mask_hit"]
